<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Domashnee_zadanie_4</string>
    <string name="btn_C">C</string>
    <string name="btn_1">1</string>
    <string name="btn_2">2</string>
    <string name="btn_3">3</string>
    <string name="btn_4">4</string>
    <string name="btn_5">5</string>
    <string name="btn_6">6</string>
    <string name="btn_7">7</string>
    <string name="btn_8">8</string>
    <string name="btn_9">9</string>
    <string name="btn_0">0</string>
    <string name="btn_div">/</string>
    <string name="btn_mul">*</string>
    <string name="btn_add">+</string>
    <string name="btn_sub">-</string>
    <string name="btn_res">=</string>
    <string name="btn_open_bkt">(</string>
    <string name="btn_close_bkt">)</string>
    <string name="btn_ac">AC</string>
    <string name="btn_dot">.</string>
    <string name="text_0">0</string>

</resources>